# flymyai-lora-trainer

./: .env.example  .gitignore  LICENSE  README.md  README_ZH.md  inference.py  pyproject.toml  qwen_full_inference_example.py  qwen_full_inference_example_ZH.py  qwen_image_lora_example.json  qwen_inference_with_lora_example.py  requirements.txt  train.py  train_4090.py  train_4090_zh.py  train_full_qwen_image.py  train_qwen_edit_lora.py  train_zh.py
docs/: Qwen-Image-LoRA训练实现分析.md  lora_training_analysis.md  训练脚本内存优化对比分析.md
image_datasets/: control_dataset.py  dataset.py
notebooks/: Model-Compression-Article-2.ipynb  Model-Compression-Article-2.py  Qwen3_(4B)_GRPO.ipynb  Qwen3_4b_GRPO.py  accelerate_deep_explanation.py  ai_novel_reader_business_plan_zh.py  argparse_comprehensive_tutorial.py  autoencoders_deep_learning_zh.py  browser_automation_agent.py  build_rag_with_milvus.py  cdn_principles_zh.py  chroma_comprehensive_guide.py  crewai_comprehensive_guide.py  diffusers_api_explanation.py  embedding_apis_guide.py  embedding_models_guide_zh.py  feast_interactive_guide.py  federated_learning_guide.py  freelance_first_1000_guide_zh.py  grpo_comprehensive_notes.py  grpo_reasoning_llm.py  latent_space_ml_zh.py  llm_training_stages.py  lora_training_explanation.py  milvus_guide.py  mlops_blueprint_foundations.py  mlops_data_pipeline_advanced_guide.py  mlops_data_pipeline_guide.py  mlops_model_development_guide_zh.py  mlops_reproducibility_versioning.py  mlops_reproducibility_wb_guide.py  mlops_spark_prefect_guide_zh.py  mlops_system_lifecycle.py  model_compression_guide.py  numpy_guide.py  (+21 more)
(+6 files in other folders)
