[project]
name = "flymyai-lora-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feast>=0.54.0",
    "marimo>=0.16.5",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "pyarrow>=17.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
